yiltc-v0.2-backup/testsuite/negative/struct_missing_field.yilt
// Negative test: missing struct field initialization should produce warning
struct Point
    mut x int
    mut y int

fn main()
    let p = Point{x: 10}
    print(p.x)
